--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <html>
     <!-- console the factorial of a given number (given 5 => 5*4*3*2*1 = 120) -->
+    <script src="fact.js">
+    </script>
     <script>
-        let num = +prompt("Enter the number ",0);
-        let result = 1;
-
-        function fact() {
-            for(let iteration = 1; iteration <= num; iteration++)
-            {
-                result *= iteration;
-                console.log(result);
-            }
-        }
-        fact();
+        alert(fact());
     </script>
 </html>
